Name:                causaltrees
Version:             0.0
Description:         Causal trees for realtime multi-user document editing
Homepage:            https://github.com/PeterScott/causaltrees
License:             MIT
Author:              Peter Scott
Maintainer:          pjscott@iastate.edu
Category:            Data
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.2

Library
  Build-Depends:     base >= 3 && < 5, text >= 0.11,
                     vector >= 0.7, containers >= 0.4,
                     binary >= 0.5
  Exposed-modules:   Data.CausalTree
  ghc-options:       -Wall -Odph -O2
